--- a/index.html
+++ b/index.html
@@ -528,11 +528,11 @@ Author URL: http://w3layouts.com
                 <div class="footer-contact-info mt-4">
                     <ul>
                         <li>
-                            <a href="tel:+12 345 678 900" class="contact-text-sub">
+                            <a href="tel:+919037288659" class="contact-text-sub">
                                 <span class="fas fa-phone me-2"></span>+919037288659</a>
                         </li>
                         <li>
-                            <a href="mailto:info@example.com" class="contact-text-sub">
+                            <a href="adithyanbaby333@gmail.com" class="contact-text-sub">
                                 <span class="fas fa-envelope me-2"></span>adithyanbaby333@gmail.com </a>
                         </li>
                         <li>
