--- a/services.html
+++ b/services.html
@@ -270,7 +270,7 @@ Author URL: http://w3layouts.com
                             <span class="fas fa-phone me-2"></span>+91 9037288659</a>
                     </li>
                     <li>
-                        <a href="mailto:info@example.com" class="contact-text-sub">
+                        <a href="mailto:adithyanbaby333@gmail.com" class="contact-text-sub">
                             <span class="fas fa-envelope me-2"></span>adithyanbaby333@gmail.com </a>
                     </li>
                     <li>
